[package]
name = "rancher"
version = "0.1.0"
authors = ["Leo Depriester <leo.depriester@camptocamp.com>"]

description = "Communicate with a Rancher server with the dedicated API."



[dependencies]
clap = "2.25.1"
serde_json = "1.0.2"
curl = "0.4.8"
base64 = "0.6.0"
tabwriter = "1.0.3"
regex = "0.2"

[lib]
name = "rancher"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/main.rs"
